media-server/mylar/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mylar
  namespace: media-server
spec:
  selector:
    matchLabels:
      app: mylar
  strategy:
    type: Recreate # This makes sure only one instance is running at a time
  template:
    metadata:
      labels:
        app: mylar
    spec:
      containers:
        - name: mylar
          image: lscr.io/linuxserver/mylar3:0.7.4
          ports:
            - containerPort: 8090
              name: http
          volumeMounts:
            - name: config-pv
              mountPath: /config
            - name: data-pv
              mountPath: /data
      securityContext:
        fsGroup: 100
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: config-pv
          persistentVolumeClaim:
            claimName: mylar-config
        - name: data-pv
          persistentVolumeClaim:
            claimName: media-pvc-2
