media-server/mylar/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mylar
  namespace: media-server
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: mylar
